# yoink

./: .gitignore  BENCHMARK_REVIEW_NOTES.md  INSTALLING.md  LICENSE  README.md  _verify_angle_b.py  answerer.py  ask.py  broker.py  evalkit.py  install.py  prompts.py  provenance.py  pyproject.toml  resolver.py  run_eval.py
benchmark/: README.md  costbench.py  plot_cost.py  progress.py  recall.py  run.py  sessions.py  stress.py  usage.py  validate_fixtures.py
docs/: METRIC.md  benchmark-strategy.md
eval/: evalkit.py  run_eval.py
eval/fixtures/: ab-01.json  ab-02.json  ab-03.json  ab-04.json  ab-05.json  ab-06.json  ab-07.json  ab-08.json  ab-09.json  ab-10.json  ab-11.json  ab-12.json  ab-13.json  ab-14.json  cr-01.json  cr-02.json  cr-03.json  cr-04.json  cr-05.json  cr-06.json  cr-07.json  cr-08.json  cr-09.json  cr-10.json  cr-11.json  cr-12.json  cr-13.json  cr-14.json  cr-15.json  de-01.json  de-02.json  de-03.json  de-04.json  de-05.json  de-06.json  de-07.json  de-08.json  de-09.json  de-10.json  de-11.json  (+65 more)
fixtures/: compacted-context.json  no-conclusion.json  side-conversation.json  two-issues.json  uncertain-conclusion.json  user-correction-at-end.json
src/yoink/: __init__.py  __main__.py  answerer.py  cli.py  config.py  install.py  prompts.py  provenance.py  resolver.py  server.py
tests/: conftest.py  helpers.py  test_answerer.py  test_ask.py  test_benchmark.py  test_broker.py  test_config.py  test_evalkit.py  test_helpers.py  test_install.py  test_integration.py  test_prompts.py  test_provenance.py  test_resolver.py
