[project]
name = "yoink"
version = "0.1.0"
description = "Grab focused context from another Claude session, without copy-paste."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.4.2",
]

[project.scripts]
yoink = "yoink.server:main"
yoink-ask = "yoink.cli:main"
yoink-install = "yoink.install:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yoink"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["eval"]
markers = [
    "eval: live model-dependent integration test (needs YOINK_INTEGRATION=1 and the claude CLI)",
]
